var/httpd/htdocs/skins/Agent/default/css/ITSM.Agent.Default.css
/**
 * @project     OTRS (http://www.otrs.org) - Agent Frontend
 * @version     $Revision: 1.10 $
 * @copyright   OTRS AG
 * @license     AGPL (http://www.gnu.org/licenses/agpl.txt)
 */

/**
 * @package     Skin "Default"
 * @section     Default Settings
 */

@media screen,projection,tv,handheld {

/**
 * @subsection  Flag
 */

fieldset.TableLike div.Value .Flag {
    float: left;
    margin-right: 5px;
    margin-top: 3px;
}

ul.ITSMFlag {
    margin-top: 5px;
}

ul.ITSMFlag div.Value .Flag {
    float: left;
    margin-right: 5px;
    margin-top: 3px;
}

.RTL fieldset.TableLike div.Value .Flag {
    float: right;
    margin-left: 5px;
}

.Flag span.grayled {
    background-color:#cdcdcd;
}

.Flag span.greenled {
    background-color: #8bef4d;
}

.Flag span.yellowled {
    background-color: #ffdd50;
}

.Flag span.redled {
    background-color:#ff505e;
}


/**
 * @note     This classes are used for a Label and a Div with class 'Field',
 *           that are inside a Field Div .
 */

label.SubElement {
        margin-left: 10%;
        margin-right: 10px;
}

div.SubElement {
    width:35%;
}

/**
 * @subsection NoDoubleBorders
 */

.Content.NoDoubleBorders {
    border-left: 0 none #000000;
    border-right: 0 none #000000;
}

/**
 * @subsection  Standard Widths
 */
.W5pc {
    width: 5%;
}

.W15pc {
    width: 15%;
}

.W30pc {
    width: 30%;
}

}/* end media */

